Implemented Hero content.

--- a/index.html
+++ b/index.html
@@ -59,8 +59,52 @@
             <!--/.nav-collapse -->
         </div>
     </nav>
-
- 
+<!-- Hero Section -->
+ <section class="bg-1 container-fluid">
+	 <div class="row">
+	 <div class="col-lg-8 col-md-7">
+		 <div class="intro-box">
+	<h2 class="title">migration agent</h2>
+	 <p>Max International, a reputed Migration consultancy and agency, was established in 2009 with the intention of providing genuine, reliable and cost effective service and support to people who wish to make Australia their home. 
+           </p>
+		 </div>
+		 </div>
+		 <div class="col-lg-4 col-md-5">
+		 <div class="form">
+			 <form>
+  <div class="form-group">
+    <label >Name:</label>
+    <input type="text" class="form-control" id="exampleInputName" placeholder="">
+  </div>
+  <div class="form-group">
+    <label>email:</label>
+    <input type="email" class="form-control" id="exampleInputEmail" placeholder="">
+  </div>
+				 
+				 <div class="form-group">
+    <label>telephone:</label>
+    <input type="number" class="form-control" id="exampleInputEmail" placeholder="">
+  </div>		 <div class="form-group">
+    <label>mobile:</label>
+    <input type="number" class="form-control" id="exampleInputEmail" placeholder="">
+  </div>
+  
+				 	 <div class="form-group">
+    <label>city:</label>
+    <input type="text" class="form-control" id="exampleInputEmail" placeholder="">
+  </div>
+				 	 <div class="form-group m-b-15">
+    <label>enquiry:</label>
+						 <textarea type="number" class="form-control" id="exampleInputEmail" placeholder=""></textarea>
+  </div>
+				 <div class="text-center">
+  <button type="submit" class="btn btn-primary send">Send</button></div>
+</form>
+			 </div>
+		 </div>
+	 </div>
+	 
+	</section>
     <!-- /.container -->
 
 
