About us page content

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	 <div class="row">
 	 <div class="col-lg-8 col-md-7">
 		 <div class="intro-box">
-	<h2 class="title">migration agent</h2>
+	<h2 class="">migration agent</h2>
 	 <p>Max International, a reputed Migration consultancy and agency, was established in 2009 with the intention of providing genuine, reliable and cost effective service and support to people who wish to make Australia their home. 
            </p>
 		 </div>
@@ -106,8 +106,23 @@
 	 
 	</section>
     <!-- /.container -->
-
-
+<!--About US-->
+<section class="content about-us">
+	<div class="container text-center">
+		<div class="content-box">
+	<h4 class="title">ABOUt us</h4>
+		<p class="semi-bold">Max,International is Brisbane based migration consultancy with office situated in Brisbane CBD.</p>
+	<p class="l-h-35">
+Max International was established in 2009 and from the very beginning we have been dedicated to giving all our clients quality assistance with their visa and migration issues.</p>
+	<p class="l-h-35">
+		Founder and Director, Manvinder Jit Kaur has successfully practiced as a Migration Agent since 2009 (MARN 0956223). She was born in India and migrated to Australia in 2005. As a non-English speaking immigrant, she accepted the challenge to establish herself in an unfamiliar country and begin a new life. Inspired by her journey, she aimed to help others in their migration to Australia and with this goal in mind she founded 
+MAX INTERNATIONAL Migration agency.
+		</p>
+			<div class="text-center">
+  <button type="submit" class="btn btn-primary uppercase">read more</button></div>
+		</div>
+	</div>
+	</section>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
