--- a/index.html
+++ b/index.html
@@ -123,6 +123,60 @@ MAX INTERNATIONAL Migration agency.
 		</div>
 	</div>
 	</section>
+	
+	
+<!--About US-->
+<section class="content visa-service">
+	<div class="container text-center">
+		<h4 class="title">visa services</h4>
+		<div class="row">
+		<div class="col-sm-6 col-md-4">
+			<div class="circle">
+<img class="img-circle" src="img/p-1.jpg"></div>
+			<h5 class="img-title uppercase">family visa</h5>
+			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+</p>
+			</div>
+		<div class="col-sm-6 col-md-4">
+			<div class="circle">
+<img class="img-circle" src="img/p-2.jpg"></div>
+			<h5 class="img-title uppercase">family visa</h5>
+			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+</p>
+			</div>
+			<div class="col-sm-6 col-md-4">
+			<div class="circle">
+<img class="img-circle" src="img/p-3.jpg"></div>
+			<h5 class="img-title uppercase">family visa</h5>
+			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+</p>
+			</div>
+			<div class="col-sm-6 col-md-4">
+			<div class="circle">
+<img class="img-circle" src="img/p-4.jpg"></div>
+			<h5 class="img-title uppercase">family visa</h5>
+			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+</p>
+			</div>
+			<div class="col-sm-6 col-md-4">
+			<div class="circle">
+<img class="img-circle" src="img/p-5.jpg"></div>
+			<h5 class="img-title uppercase">family visa</h5>
+			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+</p>
+			</div>
+			<div class="col-sm-6 col-md-4">
+			<div class="circle">
+<img class="img-circle" src="img/p-6.jpg"></div>
+			<h5 class="img-title uppercase">family visa</h5>
+			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+</p>
+			</div>
+		</div>
+	</div>
+	</section>
+	
+	
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
