Minor issue corrections in visa.

--- a/index.html
+++ b/index.html
@@ -140,35 +140,35 @@ MAX INTERNATIONAL Migration agency.
 		<div class="col-sm-6 col-md-4">
 			<div class="circle">
 <img class="img-circle" src="img/p-2.jpg"></div>
-			<h5 class="img-title uppercase">family visa</h5>
+			<h5 class="img-title uppercase">student visa</h5>
 			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
 </p>
 			</div>
 			<div class="col-sm-6 col-md-4">
 			<div class="circle">
 <img class="img-circle" src="img/p-3.jpg"></div>
-			<h5 class="img-title uppercase">family visa</h5>
+			<h5 class="img-title uppercase">skilled visa</h5>
 			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
 </p>
 			</div>
 			<div class="col-sm-6 col-md-4">
 			<div class="circle">
 <img class="img-circle" src="img/p-4.jpg"></div>
-			<h5 class="img-title uppercase">family visa</h5>
+			<h5 class="img-title uppercase">visa appeals</h5>
 			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
 </p>
 			</div>
 			<div class="col-sm-6 col-md-4">
 			<div class="circle">
 <img class="img-circle" src="img/p-5.jpg"></div>
-			<h5 class="img-title uppercase">family visa</h5>
+			<h5 class="img-title uppercase">visitor visa</h5>
 			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
 </p>
 			</div>
 			<div class="col-sm-6 col-md-4">
 			<div class="circle">
 <img class="img-circle" src="img/p-6.jpg"></div>
-			<h5 class="img-title uppercase">family visa</h5>
+			<h5 class="img-title uppercase">employer sponored visa</h5>
 			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
 </p>
 			</div>
