--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 <!--	slick Slider -->
 	<link rel="stylesheet" type="text/css" href="slick/slick.css"/>
 	<link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+	
+<!--	font awesome -->
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -272,6 +275,74 @@ MAX INTERNATIONAL Migration agency.
 		</div>
 		</div>
 	</section>
+<!--	footer  -->
+	
+	<section class="content footer">
+	<div class="container">
+		<div class="row">
+		<div class="col-lg-3 col-md-3 col-sm-6 logo-content m-b-40">
+			<img class="img-responsive img-logo" src="img/logo-white.png">
+			<div class="social">
+			<a class="" href=""><img src="img/facebook.png"></a>
+			<a class="" href=""><img src="img/twitter.png"></a>
+			<a class="" href=""><img src="img/skype.png"></a>
+			</div>
+			</div>
+			<div class="col-lg-3 col-md-3 col-sm-6 m-b-40">
+				<div> <a href="#" class="uppercase"><span>services</span></a></div>
+				<div class="collapsi uppercase">
+				<ul>
+					<li><a href="#">family visa</a></li>
+					<li><a href="#">student visa</a></li>
+					<li><a href="#">skill visa</a></li>
+					<li><a href="#">appeals visa</a></li>
+					<li><a href="#">visitor visa</a></li>
+					<li><a href="#">employer sponored visa</a></li>
+					</ul>
+				</div>
+			</div>
+			<div class="col-lg-2 col-md-2 col-sm-6 m-b-40">
+				<div> <a href="#" class="uppercase"><span>navigation</span></a></div>
+				<div class="collapsi uppercase">
+				<ul>
+					<li><a href="#">home</a></li>
+					<li><a href="#">about us</a></li>
+					<li><a href="#">what we do?</a></li>
+					<li><a href="#">about australia</a></li>
+					<li><a href="#">testimonials</a></li>
+					<li><a href="#">newsletter</a></li>
+					<li><a href="#">contact</a></li>
+					</ul>
+				</div>
+			</div>
+				<div class="col-lg-4 col-md-4 col-sm-6 m-b-40 address">
+				<p class="uppercase"><span>contact</span></p>
+					<div class="uppercase m-tb-15 add-cont"><span>address:</span> Level 3 150 Edward St Brisbane Qld 4000</div>
+			<div class="row uppercase m-tb-15 add-cont">
+					<div class="col-md-6"><span>phone: </span> 07 3210 1975</div>
+					<div class="col-md-6"><span>mobile :</span> 07 3219 6705</div>
+					</div>	
+					<div class=" m-tb-15 add-cont"><span class="uppercase">mail: </span> info@maxinternational.com.au</div>
+			<div class="newsletter">
+			<div class="form-group  m-tb-15">
+    <label class="uppercase" for="exampleInputAmount">newsletter</label>
+    <div class="input-group">
+      <input type="email" class="form-control" id="exampleInputAmount" placeholder="Email Address">
+      <div class="input-group-addon uppercase">subscribe</div>
+    </div>
+  </div>
+				</div>
+			
+			</div>
+			</div>
+		</div>
+	</section>
+	<div class="footer bottom">
+		<div class="container">
+	<p class="left">&copy; 2007 - 2016 Max International  All rights reserved.</p>
+	<p class="right">Design by Kush Infosystems Inc.</p>
+	</div>
+	</div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
