issue fixed in about page

--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
 	</section>
     <!-- /.container -->
 <!--About US-->
-<section class="content about-us" id="about">
+<section class=" about-us" id="about">
+	<div class=" content overlay">
 	<div class="container text-center">
 		<div class="content-box">
 	<h4 class="title">ABOUt us</h4>
@@ -130,7 +131,7 @@ MAX INTERNATIONAL Migration agency.
   <button type="submit" class="btn btn-primary uppercase">read more</button></div>
 		 <div class="strip-line"></div>
 		</div>
-	</div>
+		</div></div>
 	</section>
 	
 	
