Issue in login button

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <li><a class="click" href="#testimonial">Testimonials</a></li>
                     <li><a class="click" href="#news">Newsletter</a></li>
                     <li><a class="click" href="#contact">Contact</a></li>
-                    <li><a class="" href="#" class="btn btn-primary login" id="login">login</a></li>
+                    <li><a class="" href="#login" class="btn btn-primary login" id="login">login</a></li>
                 </ul>
             </div>
             <!--/.nav-collapse -->
