Removed stripe lines

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 	<h2 class="">migration agent</h2>
 	 <p>Max International, a reputed Migration consultancy and agency, was established in 2009 with the intention of providing genuine, reliable and cost effective service and support to people who wish to make Australia their home. 
            </p>
-			  <div class="strip-line"></div>
+<!--			  <div class="strip-line"></div>-->
 		 </div>
 		 </div>
 		 <div class="col-lg-4 col-md-5">
